--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.ojdbc6_g.jar=src/java/oracle/ojdbc6_g.jar
+file.reference.sqlite-jdbc-3.7.2.jar=C:\\Users\\\u0410\u043d\u043d\u0430 \u0421\u0430\u043c\u043e\u0448\u0438\u043b\u043e\u0432\u0430\\OneDrive\\ASFPB\\sqlite-jdbc-3.7.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6_g.jar}
+    ${file.reference.ojdbc6_g.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -70,7 +72,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
